# sube

./: .eslintignore  .eslintrc.cjs  .prettierignore  .prettierrc  bun.lockb  eslint.config.js  package.json  panel.html  portal.html  tailwind.config.js  title_bar.html  vite.config.ts
.github/workflows/: test-build.yml
.husky/: install.mjs  pre-commit
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  init.rs  main.rs
src-tauri/src/app/: inject.js  mod.rs  setup.rs  shortcut.rs  tray.rs  window_event.rs
src-tauri/src/config/: custom.rs  mod.rs  sube.json  sube.toml  user_agent.rs  window.rs
src-tauri/src/persona/: mod.rs  personas.yml  sites.rs
src/panel/: Panel.svelte  panel.ts
src/portal/: Portal.svelte  portal.ts
src/portal/components/: Input.svelte  Select.svelte  SiteCard.svelte  SiteGrid.svelte
src/shared/: sites.ts  store.ts
src/shared/components/: SiteCard.svelte
src/title_bar/: TitleBar.svelte  title_bar.ts
src/utils/: constants.ts  directives.ts  validators.ts
